# architecture-demo

./: stack.yaml
abstract-effects/: abstract-effects.cabal
abstract-effects/lib/: Effects.hs  Wiring.hs
abstract-effects/main/: Main.hs
abstract-effects/src/: Logic.hs  Main.hs
has-handle/: has-handle.cabal
has-handle/lib/: Effects.hs  Logic.hs  Wiring.hs
has-handle/main/: main.hs
has-handle/src/: Effects.hs  Logic.hs  Main.hs
simple/: simple.cabal
simple-abstract/: simple-abstract.cabal
simple-abstract/src/: Logic.hs  Main.hs
simple/src/: Logic.hs  Main.hs
some-library/: some-library.cabal
some-library/src/: SomeLibrary.hs
