name: has-handle
version: 0.0.0.1
author: Daniel Brice
copyright: 2019 Daniel Brice
build-type: Simple
cabal-version: >= 1.10

library
  hs-source-dirs: lib
  exposed-modules:
    Effects
    Logic
    Wiring
  build-depends:
    base >= 4.9 && < 5
    , mtl
    , transformers
    , some-library
  exposed: True
  buildable: True
  default-language: Haskell2010
  ghc-options:
    -Wall

executable has-handle-main
  hs-source-dirs: main
  main-is: Main.hs
  build-depends:
    base >= 4.9 && < 5
    , has-handle
  default-language: Haskell2010
  ghc-options:
    -Wall
