name: simple
version: 0.0.0.1
author: Daniel Brice
copyright: 2019 Daniel Brice
build-type: Simple
cabal-version: >= 1.10

executable simple
  hs-source-dirs: src
  main-is: Main.hs
  other-modules:
    Logic
  build-depends:
    base >= 4.9 && < 5
    , some-library
  default-language: Haskell2010
  ghc-options:
    -Wall
